--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 text-shadow: 0 0 0px rgba(255,255,255,0);
             }
         }
+
+        /* Koala vertical entry animation */
+        @keyframes koala-up {
+            0% { transform: translateY(100%); opacity: 0; }
+            100% { transform: translateY(0); opacity: 1; }
+        }
+        .animate-koala-up {
+            animation: koala-up 1000ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
+        }
     </style>
 <script type="importmap">
 {
